--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "node-project",
-  "version": "1.0.0",
-  "description": "Empty node project",
+  "name": "@petitchevalroux/opengraph-fetcher",
+  "version": "0.0.0",
+  "description": "NodeJS opengraph fetcher using a duplex stream",
+  "main": "src/stream.js",
   "scripts": {
     "test": "make tests"
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://github.com/petitchevalroux/node-project.git"
+    "url": "git+ssh://github.com/petitchevalroux/node-opengraph-fetcher.git"
   },
   "author": "Patrick Poulain",
   "license": "GPL-3.0",
   "bugs": {
-    "url": "https://github.com/petitchevalroux/node-project/issues"
+    "url": "https://github.com/petitchevalroux/node-opengraph-fetcher/issues"
   },
-  "homepage": "https://github.com/petitchevalroux/node-project#readme",
+  "homepage": "https://github.com/petitchevalroux/node-opengraph-fetcher#readme",
   "devDependencies": {
     "eslint": "^3.3.1",
     "eslint-plugin-promise": "^2.0.1",
@@ -22,5 +23,9 @@
     "js-beautify": "^1.6.3",
     "mocha": "^3.0.2",
     "sinon": "^1.17.5"
+  },
+  "dependencies": {
+    "@petitchevalroux/error": "^1.0.1",
+    "open-graph": "^0.2.2"
   }
 }
